--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Productivity Assistant App",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss build src/styles.css -o public/styles.css"
+    "build-css": "tailwindcss build src/styles.css -o public/styles.css",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "morgan": "^1.10.0",
     "tailwindcss": "^3.4.13"
   }
 }
