--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",   
+        "src": "app.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
+        "src": "/public/(.*)",
+        "dest": "/public/$1"
+      },
+      {
         "src": "/(.*)",
-        "dest": "app.js" 
+        "dest": "app.js"
       }
     ]
-  }
