--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Productivity Assistant App",
   "main": "app.js",
   "scripts": {
-    "build-css": "tailwindcss build src/styles.css -o public/styles.css",
+    "build-css": "tailwindcss build src/styles.css -o public/styles.css --minify",
     "dev": "nodemon app.js",
     "node-css-build": "npm run build-css && npm run dev",
     "start": "node app.js",
-    "build": "npm run build"
+    "build": "npm run build-css"
   },
   "keywords": [],
   "author": "",
